Upgrade pom to 0.153-SNAPSHOT and other minor updates
- Add flush to AccumuloPageSink
For large table inserts, the AccumuloPageSink can cause a JVM crash due
to the client-side buffering of metrics.  This adds a temporary fix
while a better solution can be implemented.
- Rename FLOAT to REAL
- Remove serialVersionUID
- Use getConstructor.newInstance
- Use Guice to inject Connector vs static singleton
Connector remains singleton in testing code to ensure all tests use the
same MiniAccumuloCluster instance
- Remove setOptionalConfig
- Add exception clause for ZKMetadataManager race condition
- Remove provided scope from javax.inject and jackson deps
- Wrap Range objects in AccumuloSplit
- Fix NPE in listTables
- Documentation improvements
- Validate exception class
- Remove use of ConnectorFactoryContext
- Make io.airlift.units provided